// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compareTwoFlatEntity It should detect flat field metadata isActive diff from true to false 1`] = `
{
  "nonUpdatablePropertyDivergences": [],
  "update": {
    "isActive": false,
  },
}
`;

exports[`compareTwoFlatEntity It should detect flat field metadata isActive diff from true to false 2`] = `
{
  "nonUpdatablePropertyDivergences": [],
  "update": {
    "isActive": true,
  },
}
`;
